# chat_app

./: .env.example  .gitignore  README.md  TODO.md  pyproject.toml
alembic/: env.py
alembic/versions/: 0f07c7385c59_initial_migration.py
app/: README.md  TODO.md  __init__.py  entities.py  main.py  router.py  schemas.py  service.py
app/features/bots/: README.md  TODO.md  entities.py  router.py  schemas.py  service.py
app/features/conversations/: README.md  TODO.md  entities.py  router.py  schemas.py  service.py
app/features/users/: README.md  TODO.md  entities.py  router.py  schemas.py  service.py
app/shared/agents/: README.md  TODO.md  entities.py  schemas.py  service.py
app/shared/config/: README.md  TODO.md  __init__.py  entities.py  schemas.py  service.py
app/shared/database/: README.md  TODO.md  entities.py  schemas.py  service.py
app/shared/routing/: README.md  TODO.md  __init__.py  entities.py  schemas.py  service.py
app/shared/tools/: README.md  TODO.md  entities.py  schemas.py  service.py
app/shared/trigger/: README.md  TODO.md  entities.py  schemas.py  service.py
docs/: AI_AGENTS_BOTS.md  ARCHITECTURE.md  BEST_PRACTICES.md  EXAMPLES.md
docs/app/: README.md  TODO.md
docs/app/features/bots/: README.md  TODO.md
docs/app/features/conversations/: README.md  TODO.md
docs/app/features/users/: README.md  TODO.md
docs/app/shared/agents/: README.md  TODO.md
scripts/: README.md  alembic_reset.py  db_manage.py  seed_data.py  simple_test.py  test_api.py
tests/: conftest.py
tests/app/: README.md  TODO.md  test_health.py
(+51 files in other folders)
