[project]
name = "chat-app"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.121.2",
    "pydantic>=2.12.4",
    "pydantic-settings>=2.12.0",
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",
    "pydantic-ai>=1.18.0",
    "alembic>=1.13.0",
]

[project.optional-dependencies]
dev = [
    "octopus",
]

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.uv.sources]
octopus = { git = "https://github.com/Tom-Laurent-TL/octopus.git" }
